@@ -42,7 +42,6 @@ bar (char *x, unsigned int y)
   return 0;
 }
 
-#ifndef __SDCC_pdk14 // Bug #2874
 static inline char *
 baz (char *x, unsigned int y)
 {
@@ -119,12 +118,11 @@ setup2 (void)
   return j;
 }
 #endif
-#endif
 
 void
 testTortureExecute (void)
 {
-#if defined (__SDCC) && !defined (__SDCC_mcs51) && !defined(__SDCC_pdk14) && !defined (__SDCC_pdk15)
+#if defined (__SDCC) && !defined (__SDCC_mcs51) && !defined(__SDCC_pdk14) && !defined (__SDCC_pdk15) // Lack of memory
   int x;
   c = g;
   b = 4;
