@@ -10,8 +10,7 @@
 
 #include <string.h>
 
-#if !defined(__SDCC_pdk14) && !defined (__SDCC_pdk15) // Bug #2874
-#ifndef __SDCC_mcs51
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_pdk14) && !defined (__SDCC_pdk15) // Lack of memory
 typedef struct PgHdr PgHdr;
 typedef unsigned char u8;
 struct PgHdr {
@@ -87,13 +86,11 @@ PgHdr *sort_pagelist(PgHdr *pIn)
  return p;
 }
 #endif
-#endif
 
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_pdk14) && !defined (__SDCC_pdk15) // Bug #2874
-#ifndef __SDCC_mcs51
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_pdk14) && !defined (__SDCC_pdk15) // Lack of memory
  PgHdr a[5];
  PgHdr *p;
  a[0].x.pgno = 5;
@@ -108,7 +105,6 @@ testTortureExecute (void)
  if (p->x.pDirty == p)
    ASSERT (0);
  return;
-#endif
 #endif
 }
 
