@@ -8,7 +8,6 @@
 #pragma std_c99
 #endif
 
-#if !defined(__SDCC_pdk14) && !defined (__SDCC_pdk15) // Bug #2874
 static inline unsigned int
 mod_rhs(int rhs)
 {
@@ -23,14 +22,11 @@ void func_44 (unsigned int p_45)
       ASSERT (0);
   }
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_pdk14) && !defined (__SDCC_pdk15) // Bug #2874
   func_44 (2);
   return;
-#endif
 }
 
