@@ -13,7 +13,6 @@
 
 /* PR rtl-optimization/63843 */
 
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
 static inline
 unsigned short foo (unsigned short v)
 {
@@ -31,12 +30,10 @@ bar (unsigned char *x)
   memcpy (&b, &x[2], sizeof (b));
   return foo (b);
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
   unsigned char x[8] = { 0x01, 0x01, 0x01, 0x01 };
   if (CHAR_BIT == 8
       && sizeof (short) == 2
@@ -44,5 +41,4 @@ testTortureExecute (void)
       && bar (x) != 0x8181U)
     ASSERT (0);
   return;
-#endif
 }
